force-app/main/default/objects/License_Contract__c/License_Contract__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >License_Contract_Compact_Layout</compactLayoutAssignment>
    <label>License Contract</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>License Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>