force-app/main/default/objects/License_Contract__c/fields/Current_ACV__c.field-meta.xml
<CustomField>
    <fullName>Current_ACV__c</fullName>
    <inlineHelpText
  >Current Annual Contract Value (annual cost of service as of now). May be approximate.</inlineHelpText>
    <label>Current ACV</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>