force-app/main/default/objects/License_Contract__c/fields/License_Software__c.field-meta.xml
<CustomField>
    <fullName>License_Software__c</fullName>
    <label>License Software</label>
    <referenceTo>License_Software__c</referenceTo>
    <relationshipLabel>License Contracts</relationshipLabel>
    <relationshipName>License_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>