force-app/main/default/objects/License_Contract__c/fields/of_Licenses_Contracted__c.field-meta.xml
<CustomField>
    <fullName>of_Licenses_Contracted__c</fullName>
    <label># of Licenses Contracted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>